fix: make border visible in chrome

--- a/src/styles/training-table-with-buttons.css
+++ b/src/styles/training-table-with-buttons.css
@@ -1,5 +1,5 @@
 .training-with-buttons {
-  width: 99.5%;
+  width: 99%;
   display: flex;
   justify-content: flex-start;
   position: relative;
